Fix missing docker config.php

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -6,5 +6,5 @@ RUN apt-get update && \
 
 WORKDIR /var/www/html
 
-COPY . .
+COPY --chown=www-data:www-data . .
 COPY docker/php-fpm/src/config.php config.php
