--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   nginx:
     image: hybula/lookingglass-nginx:1
+    container_name: lg-nginx
     build:
       context: docker/nginx
       dockerfile: Dockerfile
@@ -12,6 +13,7 @@ services:
 
   php-fpm:
     image: hybula/lookingglass-php:1
+    container_name: lg-php
     build:
       context: .
       dockerfile: docker/php-fpm/Dockerfile
@@ -33,3 +35,13 @@ services:
       # ENABLE_CUSTOM_BLOCK: 'true'
       # Uncomment if you require visitors to accept the Terms of Use; the value should be a link to the terms.
       # LG_TERMS: http://localhost/
+
+  iperf3:
+    image: networkstatic/iperf3:latest
+    container_name: lg-iperf3
+    ports:
+      - "5201:5201"
+    command: -s
+    tty: true
+    stdin_open: true
+    restart: unless-stopped
