Change network mode of containers to host. Add iproute2 package in php-fpm image

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
 
         location ~ \.php$ {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass php-fpm:9000;
+            fastcgi_pass localhost:9000;
             fastcgi_index index.php;
             include fastcgi.conf;
             fastcgi_buffering on;
