--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: "3.8"
-
 services:
   nginx:
     image: hybula/lookingglass-nginx:1
     container_name: lg-nginx
     build:
-      context: docker/nginx
-      dockerfile: Dockerfile
-    ports:
-      - "80:80"
+      context: .
+      dockerfile: docker/nginx/Dockerfile
+    network_mode: host
     restart: unless-stopped
 
   php-fpm:
@@ -17,6 +14,7 @@ services:
     build:
       context: .
       dockerfile: docker/php-fpm/Dockerfile
+    network_mode: host
     restart: unless-stopped
     environment:
       # For a better reference as to what these variables do, check out 'config.dist.php' or 'docker/php-fpm/src/config.php'.
@@ -39,8 +37,7 @@ services:
   iperf3:
     image: networkstatic/iperf3:latest
     container_name: lg-iperf3
-    ports:
-      - "5201:5201"
+    network_mode: host
     command: -s
     tty: true
     stdin_open: true
