--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update && \
     apt-get --no-install-recommends -y install iputils-ping mtr traceroute iproute2 && \
     rm -rf /var/lib/apt/lists/*
 
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+
 WORKDIR /var/www/html
 
 COPY --chown=www-data:www-data . .
