--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.4-fpm-bullseye
 
 RUN apt-get update && \
-    apt-get --no-install-recommends -y install iputils-ping mtr traceroute iproute2 && \
+    apt-get --no-install-recommends -y install iputils-ping mtr traceroute iproute2 libfcgi-bin && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
